# Hackaton-MedGemma

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/helpers/: auto-memory-hook.mjs  statusline.cjs
.github/workflows/: ci.yml
config/: default.yaml  kaggle.yaml
docs/: kaggle-writeup.md  ruvector-examples-catalog.md  video-script.md
docs/adr/: ADR-001-system-architecture.md  ADR-002-framework-and-ui.md  ADR-003-medgemma-integration.md  ADR-004-segmentation-model-stack.md  ADR-005-tumor-growth-engine.md  ADR-006-dataset-strategy.md  ADR-007-imaging-pipeline.md  ADR-008-uncertainty-quantification.md  ADR-009-recist-compliance.md  ADR-010-lesion-tracking.md  ADR-011-safety-ethics-phi.md  ADR-012-compute-strategy.md  ADR-013-evaluation-metrics.md  ADR-014-project-structure.md  ADR-015-hitl-measurement.md
docs/initial-spec/: competition-overview.md  rules.md  spec.md
scripts/: download_datasets.py  generate_demo_data.py  generate_test_volumes.py  run_demo.sh  setup.sh  test_upload.py
src/digital_twin_tumor/: __init__.py  __main__.py
src/digital_twin_tumor/config/: __init__.py  environment.py  settings.py
src/digital_twin_tumor/data/: __init__.py  datasets.py  demo_loader.py  synthetic.py
src/digital_twin_tumor/domain/: __init__.py  events.py  models.py  protocols.py
src/digital_twin_tumor/evaluation/: __init__.py  backtest.py  metrics.py
src/digital_twin_tumor/ingestion/: __init__.py  dicom_loader.py  (+2 more)
tests/: conftest.py  test_datasets.py  test_demo_loader.py  test_domain.py  test_enhancements.py  test_evaluation_backtest.py  test_evaluation_metrics.py  test_measurement.py  test_medgemma_reasoning.py  test_preprocessing.py  test_reasoning.py  test_storage.py  test_tracking.py  test_twin_engine.py  test_upload_pipeline.py
(+35 files in other folders)
